Python 2 compatibility. Prepare 0.3.0. (#7)
* Add: dev-dependency `where`

* Add: find python executable

* Add: py2 dev-dependency

* Fix: pathlib is not available in py2

* Add: unittest2 for py2

* Fix: do not assert type but check `file.open` attribute

* Fix: crc32 error

* Add: dev-dep subprocess32

* Fix: replace OSError with IOError

* WIP: API change

* WIP: APNG.from_bytes

* WIP: PNG.open_any

* WIP: add pylint

* Pass pylint

* Fix: test

* Update doc

* Update readme

* Doc: ImportError for PNG.open_any

* Add: type check for APNG.append

* Add: APNG.append_file

* Update doc for APNG.from_files

* Fix: typo

* Fix: use append_file

* Fix: use open_any in append_file

* Clean pylintrc

* Fix: link the issue to typecheck suppression

* Update indent_size, changelog

* Add: live reload readme

* Add: travis

* WIP: travis

* WIP: travis

* Fix: yaml syntax error

* WIP: travis

* WIP: travis

* Fix: update PATH

* WIP: travis

* WIP: travis

* WIP: travis test

* Fix: build folder doesn't exist

* fixup! Fix: build folder doesn't exist

* Add: travid badge

* Add: Python 2.7 classifier

* Fix: use nicer rst2html5

* Fix: use cute script and env markers

* Update pyxcute

* Update pycute

* Fix: missing extension

* Fix: let pyxcute handle versions

* Update docutils

* Fix: various

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,7 @@
-[*.rst]
-indent_style = space
-indent_size = 3
+[*.py]
+indent_style = tab
+indent_size = 4
 
-[*.yml]
+[*.{rst,yml}]
 indent_style = space
 indent_size = 2
