--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-docutils~=0.12
-twine~=1.6.5
-pyxcute~=0.4.1
-sphinx-autobuild~=0.7.1
-Sphinx~=1.6.5
+docutils>=0.14
+twine>=1.6.5,<2
+pyxcute>=0.5.1,<0.6
+sphinx-autobuild>=0.7.1,<0.8
+Sphinx>=1.6.5,<2
+pylint>=1.8.4,<2
+pathlib2>=2.3.2,<3; python_version<"3.5"
+unittest2>=1.1.0,<2; python_version<"3.5"
+subprocess32==3.5.0rc1; python_version<"3.5"
