--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = apng
-version = attr: apng.__init__.__version__
+version = 0.2.1
 description = A Python module to deal with APNG file.
 author = eight
 author_email = eight04@gmail.com
@@ -11,6 +11,7 @@ classifiers =
 	Intended Audience :: Developers
 	License :: OSI Approved :: MIT License
 	Natural Language :: Chinese (Traditional)
+	Programming Language :: Python :: 2.7
 	Programming Language :: Python :: 3.5
 	Programming Language :: Python :: 3.6
 	Topic :: Multimedia :: Graphics :: Graphics Conversion
