--- a/.pylintrc
+++ b/.pylintrc
@@ -1,11 +1,12 @@
 [MESSAGES CONTROL]
 disable=
 	bad-continuation, # https://github.com/PyCQA/pylint/issues/1148
-	bad-whitespace, # https://github.com/PyCQA/pylint/issues/1368
 	design,
 	fixme,
 	missing-docstring,
 	trailing-whitespace,
+  unnecessary-pass
+
 	
 [BASIC]
 # https://github.com/PyCQA/pylint/issues/2018
