--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ python:
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y pngcheck
+install:
+  - pip install -e .
+  - pip install -r requirements.txt
 script:
   - python cute.py test
