--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,9 @@ url = https://github.com/eight04/pyAPNG
 zip_safe = True
 packages = find:
 
+[options.packages.find]
+exclude = test
+
 [bdist_wheel]
 universal = True
 
