--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,13 @@ python:
   - "2.7"
   - "3.5"
   - "3.6"
+  - "3.7"
+  - "3.8"
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y pngcheck
 install:
   - pip install -e .
-  - pip install -r requirements.txt
+  - xargs -a requirements-lock.txt -I % bash -c "pip install %" || true
 script:
   - python cute.py test
